Document effective changes

--- a/VlimsWeb/ClientApp/src/app/UserManagement/mainpage.html
+++ b/VlimsWeb/ClientApp/src/app/UserManagement/mainpage.html
@@ -54,7 +54,7 @@
       </a>
       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-              <a class="collapse-item" [routerLink]="['/mainpage/hierarchy']">Security Management</a>
+              <a class="collapse-item" [routerLink]="['/mainpage/security']">Security Management</a>
               <a class="collapse-item" [routerLink]="['/mainpage/hierarchy']">Hierarchy Management</a>
               <a class="collapse-item" [routerLink]="['/mainpage/hierarchy']">Plant Management</a>
               <a class="collapse-item" [routerLink]="['/mainpage/users']">User Management</a>
