--- a/VlimsWeb/ClientApp/src/app/document-effective-edit/document-effective-edit.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-effective-edit/document-effective-edit.component.html
@@ -10,7 +10,7 @@
       <div class="modal-body">
         <div class="form-group row">
 
-          <label  class="col-sm-4 col-form-label">Document Title :</label>
+          <label class="col-sm-4 col-form-label">Document Title :</label>
           <div class="col-sm-8">
             <input type="text" class="form-control" id="documenttitle" [(ngModel)]="adddocreq.documenttitle"
                    pattern='[A-Za-z\\s]*' name="documenttitle" aria-describedby="productname" placeholder="documenttitle"
@@ -20,7 +20,7 @@
 
         <div class="form-group row">
 
-          <label  class="col-sm-4 col-form-label">Document No :</label>
+          <label class="col-sm-4 col-form-label">Document No :</label>
 
           <div class="col-sm-8">
 
@@ -37,9 +37,15 @@
           <label for="BrandName" class="col-sm-4 col-form-label">Document Type :</label>
 
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="DocType" [(ngModel)]="adddocreq.documenttype"
-                   pattern='[A-Za-z\\s]*' name="DocType" aria-describedby="productname" placeholder="Document Type"
-                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+            <select class="form-control" [(ngModel)]="adddocreq.documenttype" name="typeId" #typeId="ngModel"
+                    [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
+
+              <option value="Select">Select</option>
+              <option *ngFor="let doctype of doctypes" value={{doctype.Documenttypename}}>{{doctype?.Documenttypename}}</option>
+            </select>
+            <!--<input type="text" class="form-control" id="DocType" [(ngModel)]="adddocreq.documenttype"
+            pattern='[A-Za-z\\s]*' name="DocType" aria-describedby="productname" placeholder="Document Type"
+            #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />-->
           </div>
         </div>
         <div class="form-group row">
@@ -47,9 +53,15 @@
           <label for="BrandName" class="col-sm-4 col-form-label">Department :</label>
 
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="Department" [(ngModel)]="adddocreq.Department"
+
+            <select class="form-control" [(ngModel)]="adddocreq.department" name="Assigntodepartment" id="Assigntodepartment" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
+                    [ngClass]="{ 'is-invalid': fm.submitted && Assigntodepartment.invalid }" required>
+              <option value="Select">Select</option>
+              <option *ngFor="let type of departs" value={{type.DepartmentName}}>{{type?.DepartmentName}}</option>
+            </select>
+            <!--<input type="text" class="form-control" id="Department" [(ngModel)]="adddocreq.Department"
                    pattern='[A-Za-z\\s]*' name="Department" aria-describedby="productname" placeholder="Department"
-                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />-->
           </div>
         </div>
         <div class="form-group row">
@@ -57,7 +69,7 @@
           <label for="BrandName" class="col-sm-4 col-form-label">Document :</label>
 
           <div class="col-sm-8">
-            <input  type="url"
+            <input type="url"
                    name="Document" aria-describedby="Document" placeholder="Document" [(ngModel)]="adddocreq.document"
                    #BrandName="ngModel" />
           </div>
@@ -83,7 +95,7 @@
         </div>
 
         <div class="modal-footer">
-          <button type="submit" class="btn btn-primary" >Submit</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
           <button type="button" class="btn btn-secondary" (click)="closepopup();">Close</button>
 
         </div>
