--- a/VlimsWeb/ClientApp/src/app/usergroupconfiguration/usergroupconfiguration.component.html
+++ b/VlimsWeb/ClientApp/src/app/usergroupconfiguration/usergroupconfiguration.component.html
@@ -11,17 +11,14 @@
     </div>
   </div>
   <div class="card-body">
-
     <div class="table-responsive">
-      <!--<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="types?.length>   0">
-
+      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="types?.length>0">
         <thead>
           <tr>
             <th scope="col">#</th>
             <th scope="col">User Group Name</th>
             <th scope="col">Unique Code</th>
             <th scope="col">Total users</th>
-
             <th scope="col">Registered By</th>
             <th scope="col">Registered On</th>
             <th scope="col">Status</th>
@@ -31,27 +28,22 @@
         <tbody>
           <tr *ngFor="let doc of types; let i=index">
             <th scope="row">{{i+1}}</th>
-            <td>{{doc?.User Group name}}</td>
+            <td>{{doc?.UserGroupname}}</td>
             <td>{{doc?.Uniquecode}}</td>
-
             <td>{{doc?.ModifiedBy}}</td>
             <td>{{doc?.ModifiedDate | date}}</td>
-
             <td>Success</td>
-            <td>-->
-              <!--<button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
+            <td>
+              <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
                       data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);">
                 <span class="fa fa-flag fa-wrench"></span>
-              </button>-->
-              <!--<button class="btn"> <span class="fa fa-edit" (click)="deleteBrand(i,doc);"></span></button>
+              </button>
+              <button class="btn"> <span class="fa fa-edit" (click)="deleteBrand(i,doc);"></span></button>
             </td>
           </tr>
         </tbody>
-
-      </table>-->
-
+      </table>
     </div>
-
     <div *ngIf="types?.length==0">
       <p>No items to display</p>
     </div>
