Document effective changes

--- a/VlimsWeb/ClientApp/src/app/securitymanagement/securitymanagement.component.html
+++ b/VlimsWeb/ClientApp/src/app/securitymanagement/securitymanagement.component.html
@@ -2,7 +2,7 @@
 <div class="card shadow mb-4" style="padding-top: 2px;">
   <div class="card-header py-3">
     <div col-6 style="float: left;">
-      <h6 class="m-0 font-weight-bold text-primary">Department Configuration</h6>
+      <h6 class="m-0 font-weight-bold text-primary">Security Configuration</h6>
     </div>
     <div col-6 style="float: right;">
       <button class="btn btn-primary" type="button" [routerLink]="['/mainpage/hierarchy/adddept']">
