--- a/VlimsWeb/ClientApp/src/app/document-effective-edit/document-effective-edit.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-effective-edit/document-effective-edit.component.html
@@ -37,15 +37,15 @@
           <label for="BrandName" class="col-sm-4 col-form-label">Document Type :</label>
 
           <div class="col-sm-8">
-            <select class="form-control" [(ngModel)]="adddocreq.documenttype" name="typeId" #typeId="ngModel"
+            <select class="form-control" [(ngModel)]="adddocreq.documenttype" name="documenttype" #typeId="ngModel"
                     [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
 
-              <option value="Select">Select</option>
+              <option [ngValue]=null>Select</option>
               <option *ngFor="let doctype of doctypes" value={{doctype.Documenttypename}}>{{doctype?.Documenttypename}}</option>
             </select>
             <!--<input type="text" class="form-control" id="DocType" [(ngModel)]="adddocreq.documenttype"
-            pattern='[A-Za-z\\s]*' name="DocType" aria-describedby="productname" placeholder="Document Type"
-            #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />-->
+  pattern='[A-Za-z\\s]*' name="DocType" aria-describedby="productname" placeholder="Document Type"
+  #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />-->
           </div>
         </div>
         <div class="form-group row">
@@ -60,8 +60,8 @@
               <option *ngFor="let type of departs" value={{type.DepartmentName}}>{{type?.DepartmentName}}</option>
             </select>
             <!--<input type="text" class="form-control" id="Department" [(ngModel)]="adddocreq.Department"
-                   pattern='[A-Za-z\\s]*' name="Department" aria-describedby="productname" placeholder="Department"
-                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />-->
+         pattern='[A-Za-z\\s]*' name="Department" aria-describedby="productname" placeholder="Department"
+         #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />-->
           </div>
         </div>
         <div class="form-group row">
