--- a/VlimsWeb/ClientApp/src/app/documentprep-add/documentprep-add.component.html
+++ b/VlimsWeb/ClientApp/src/app/documentprep-add/documentprep-add.component.html
@@ -10,17 +10,18 @@
       <div class="modal-body">
         <div class="form-group row">
 
-          <label  class="col-sm-4 col-form-label">Document Title :</label>
+          <label class="col-sm-4 col-form-label">Document Title :</label>
           <div class="col-sm-8">
             <input type="text" class="form-control" id="DocumentName" [(ngModel)]="adddocreq.documenttitle"
                    pattern='[A-Za-z\\s]*' name="DocumentName" aria-describedby="productname" placeholder="documenttitle"
                    #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+
           </div>
         </div>
 
         <div class="form-group row">
 
-          <label  class="col-sm-4 col-form-label">Document No :</label>
+          <label class="col-sm-4 col-form-label">Document No :</label>
 
           <div class="col-sm-8">
 
@@ -37,31 +38,34 @@
           <label class="col-sm-4 col-form-label">Document Type :</label>
 
           <div class="col-sm-8">
-            <select class="form-control"  [(ngModel)]="adddocreq.documenttype" name="typeId"  #typeId="ngModel"
+            <select class="form-control" [(ngModel)]="adddocreq.documenttype" name="documenttype" #typeId="ngModel"
                     [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
 
-              <option value="Select">Select</option>
+              <option [ngValue]=null>Select</option>
               <option *ngFor="let doctype of doctypes" value={{doctype.Documenttypename}}>{{doctype?.Documenttypename}}</option>
             </select>
-         
+
           </div>
         </div>
         <div class="form-group row">
 
-          <label  class="col-sm-4 col-form-label">Department :</label>
+          <label class="col-sm-4 col-form-label">Department :</label>
 
           <div class="col-sm-8">
-          
-            <select class="form-control"  [(ngModel)]="adddocreq.department" name="Assigntodepartment" id="Assigntodepartment" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
+
+            <select class="form-control" [(ngModel)]="adddocreq.department" name="Assigntodepartment" id="Assigntodepartment" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
                     [ngClass]="{ 'is-invalid': fm.submitted && Assigntodepartment.invalid }" required>
               <option value="Select">Select</option>
               <option *ngFor="let type of departs" value={{type.DepartmentName}}>{{type?.DepartmentName}}</option>
             </select>
+
+
+
           </div>
         </div>
         <div class="form-group row">
 
-          <label  class="col-sm-4 col-form-label">Document :</label>
+          <label class="col-sm-4 col-form-label">Document :</label>
 
           <div class="col-sm-8">
             <input type="file" class="form-control" id="Document" [(ngModel)]="adddocreq.document"
@@ -75,7 +79,7 @@
 
           <div class="col-sm-8">
             <select class="form-control" [(ngModel)]="adddocreq.template" name="typeId" #typeId="ngModel"
-                    [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>              
+                    [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
               <option value="">Select</option>
               <option *ngFor="let type of templates" value={{type.Templatename}}>{{type.Templatename}}</option>
             </select>
@@ -83,13 +87,14 @@
         </div>
         <div class="form-group row">
 
-          <label  class="col-sm-4 col-form-label">Workflow :</label>
+          <label class="col-sm-4 col-form-label">Workflow :</label>
           <div class="col-sm-8">
-            <select class="form-control" [(ngModel)]="adddocreq.wokflow" name="typeId" #typeId="ngModel"
+            <select class="form-control" [(ngModel)]="adddocreq.wokflow" id="Workflow" name="Workflow" #typeId="ngModel"
                     [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
-              <option value="">Select</option>
+              <option [ngValue]="">Select</option>
               <option *ngFor="let type of workflowTypes" value={{type.documentstage}}>{{type.documentstage}}</option>
             </select>
+            <label></label>
           </div>
         </div>
         <div class="form-group row">
