--- a/VlimsWeb/ClientApp/src/app/securitymanagement/securitymanagement.component.html
+++ b/VlimsWeb/ClientApp/src/app/securitymanagement/securitymanagement.component.html
@@ -29,12 +29,11 @@
         <tbody>
           <tr *ngFor="let doc of types; let i=index">
             <th>{{i+1}}</th>
-            <td>{{doc?.DepartmentName}}</td>
-            <td>{{doc?.DepartmentCode }}</td>
-            <td>{{doc?.Comments}}</td>
-            <td>{{doc?.ModifiedBy}}</td>
-            <td>{{doc?.ModifiedDate  | date}}</td>
-            <td>Success</td>
+            <td>{{doc?.MinimumUserIdLength}}</td>
+            <td>{{doc?.MinimumPasswordLength }}</td>
+            <td>{{doc?.PasswordComplexity}}</td>
+            <td>{{doc?.InvalidAttempts}}</td>
+
             <td>
               <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
                       data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);">
@@ -53,4 +52,28 @@
       <p>No items to display</p>
     </div>
   </div>
+</div>
+<div>
+  <table>
+    <tr>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
 </div>
