--- a/VlimsWeb/ClientApp/src/app/usergroupconfiguration/usergroupconfiguration.component.html
+++ b/VlimsWeb/ClientApp/src/app/usergroupconfiguration/usergroupconfiguration.component.html
@@ -5,7 +5,7 @@
       <h6 class="m-0 font-weight-bold text-primary">User Group Configuration</h6>
     </div>
     <div col-6 style="float: right;">
-      <button class="btn btn-primary" type="button" [routerLink]="['/mainpage/usermanagement/addusergroup']">
+      <button class="btn btn-primary" type="button" [routerLink]="['/mainpage/users/addusergroup']">
         Add
       </button>
     </div>
@@ -15,7 +15,7 @@
       <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="types?.length>0">
         <thead>
           <tr>
-            <th scope="col">#</th>
+            <th scope="col">S.No</th>
             <th scope="col">User Group Name</th>
             <th scope="col">Unique Code</th>
             <th scope="col">Total users</th>
@@ -28,10 +28,11 @@
         <tbody>
           <tr *ngFor="let doc of types; let i=index">
             <th scope="row">{{i+1}}</th>
-            <td>{{doc?.UserGroupname}}</td>
-            <td>{{doc?.Uniquecode}}</td>
-            <td>{{doc?.ModifiedBy}}</td>
-            <td>{{doc?.ModifiedDate | date}}</td>
+            <td>{{doc?.Usergroupname}}</td>
+            <td>{{doc?.Code}}</td>
+            <td>{{doc?.Users}}</td>
+            <td>{{doc?.CreatedBy}}</td>
+            <td>{{doc?.CreatedDate | date}}</td>
             <td>Success</td>
             <td>
               <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
