--- a/VlimsWeb/ClientApp/src/app/UserManagement/mainpage.html
+++ b/VlimsWeb/ClientApp/src/app/UserManagement/mainpage.html
@@ -58,7 +58,7 @@
               <a class="collapse-item" [routerLink]="['/mainpage/hierarchy']">Hierarchy Management</a>
               <a class="collapse-item" [routerLink]="['/mainpage/hierarchy']">Plant Management</a>
               <a class="collapse-item" [routerLink]="['/mainpage/users']">User Management</a>
-              <a class="collapse-item" [routerLink]="['/mainpage/hierarchy']">Approval Configurations</a>
+              <a class="collapse-item" [routerLink]="['/mainpage/appconfig']">Approval Configurations</a>
           </div>
       </div>
   </li>
