--- a/VlimsWeb/ClientApp/src/app/Approval-Configuration/approval-configurations.component.html
+++ b/VlimsWeb/ClientApp/src/app/Approval-Configuration/approval-configurations.component.html
@@ -17,18 +17,19 @@
        
       <thead>
         <tr>
+          <th>S.no</th>
           <th scope="col">no of approvals1</th>
           <th scope="col">no of approvals1</th>
           <th scope="col">no of approvals1</th>
-          
+          <th scope="col">Actions</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let doc of types; let i=index">
           <th >{{i+1}}</th>
-          <td>{{doc?.no of approvals1}}</td>
-          <td>{{doc?.no of approvals1 }}</td>
-          <td>{{doc?.no of approvals1}}</td>
+          <td>{{approvals1}}</td>
+          <td>{{approvals1 }}</td>
+          <td>{{approvals1}}</td>
           <td>
             <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
               data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);"> <span
