Approval configuration and plant configuration changes

--- a/VlimsWeb/ClientApp/src/app/UserManagement/mainpage.html
+++ b/VlimsWeb/ClientApp/src/app/UserManagement/mainpage.html
@@ -56,7 +56,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
               <a class="collapse-item" [routerLink]="['/mainpage/security']">Security Management</a>
               <a class="collapse-item" [routerLink]="['/mainpage/hierarchy']">Hierarchy Management</a>
-              <a class="collapse-item" [routerLink]="['/mainpage/hierarchy']">Plant Management</a>
+              <a class="collapse-item" [routerLink]="['/mainpage/plant']">Plant Management</a>
               <a class="collapse-item" [routerLink]="['/mainpage/users']">User Management</a>
               <a class="collapse-item" [routerLink]="['/mainpage/appconfig']">Approval Configurations</a>
           </div>
