--- a/VlimsWeb/ClientApp/src/app/plantmanagement/plantmanagement.component.html
+++ b/VlimsWeb/ClientApp/src/app/plantmanagement/plantmanagement.component.html
@@ -2,7 +2,7 @@
 <div class="card shadow mb-4" style="padding-top: 2px;">
   <div class="card-header py-3">
       <div col-6 style="float: left;">
-      <h6 class="m-0 font-weight-bold text-primary">Department Configuration</h6>
+      <h6 class="m-0 font-weight-bold text-primary">Plant Configuration</h6>
   </div>
   <div col-6 style="float: right;">
       <button class="btn btn-primary"  type="button" [routerLink]="['/mainpage/hierarchy/adddept']"
@@ -17,8 +17,8 @@
     <thead>
       <tr>
         <th scope="col">S.No</th>
-        <th scope="col">Department Name</th>
-        <th scope="col">Department Code</th>
+        <th scope="col">Plant Name</th>
+        <th scope="col">Plant Code</th>
         <th scope="col">Comments</th>
         <th scope="col">Registered By</th>
         <th scope="col">Registered On</th>
@@ -29,8 +29,8 @@
     <tbody>
       <tr *ngFor="let doc of types; let i=index">
         <th >{{i+1}}</th>
-        <td>{{doc?.DepartmentName}}</td>
-        <td>{{doc?.DepartmentCode }}</td>
+        <td>{{doc?.PlantName}}</td>
+        <td>{{doc?.PlantCode }}</td>
         <td>{{doc?.Comments}}</td>
         <td>{{doc?.ModifiedBy}}</td>
         <td>{{doc?.ModifiedDate  | date}}</td>
