--- a/VlimsWeb/ClientApp/src/app/add-document-request/add-document-request.component.html
+++ b/VlimsWeb/ClientApp/src/app/add-document-request/add-document-request.component.html
@@ -15,7 +15,7 @@
           <div class="col-sm-8">
 
             <select class="form-control" [(ngModel)]="adddocreq.documenttype" name="documenttype" id="documenttype" #typeId="ngModel" (ngModelChange)="inputValue = $event" [ngClass]="{ 'is-invalid': fm.submitted && documenttype.invalid }" required>
-              
+
               <option value="Select">Select</option>
               <option *ngFor="let doctype of doctypes" value={{doctype.Documenttypename}}>{{doctype?.Documenttypename}}</option>
             </select>
@@ -33,9 +33,7 @@
               <option *ngFor="let dept of departs" value={{dept.DepartmentName}}>{{dept?.DepartmentName}}</option>
             </select>
 
-            <!--<input type="text" class="form-control" id="department1" [(ngModel)]="adddocreq.department"
-                   pattern='[A-Za-z\\s]*' name="department1" aria-describedby="department1" placeholder="department1"
-                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />-->
+
 
           </div>
 
@@ -62,6 +60,17 @@
           </div>
         </div>
 
+        <div class="form-group row">
+
+          <label for="AssigntoGroup" class="col-sm-4 col-form-label">Assign to Group</label>
+
+          <div class="col-sm-8">
+            <select class="form-control" [(ngModel)]="adddocreq.assigntoGroup" name="assigntoGroup" id="assigntoGroup" [disabled]="viewMode" (ngModelChange)="inputValue = $event">
+              <option value="Select">Select</option>
+              <option *ngFor="let UG of usergroups" value={{UG.Usergroupname}}>{{UG?.Usergroupname}}</option>
+            </select>
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="closepopup();">Close</button>
