--- a/VlimsWeb/ClientApp/src/app/plantmanagement/plantmanagement.component.html
+++ b/VlimsWeb/ClientApp/src/app/plantmanagement/plantmanagement.component.html
@@ -5,7 +5,7 @@
       <h6 class="m-0 font-weight-bold text-primary">Plant Configuration</h6>
   </div>
   <div col-6 style="float: right;">
-      <button class="btn btn-primary"  type="button" [routerLink]="['/mainpage/hierarchy/adddept']"
+      <button class="btn btn-primary"  type="button" [routerLink]="['/mainpage/plantnew']"
     >Add</button>
   </div>
   </div>
