--- a/VlimsWeb/ClientApp/src/app/documentprep-add/documentprep-add.component.html
+++ b/VlimsWeb/ClientApp/src/app/documentprep-add/documentprep-add.component.html
@@ -67,11 +67,14 @@
 
           <label class="col-sm-4 col-form-label">Document :</label>
 
-          <div class="col-sm-8">
+          <div class="col-sm-6">
             <input type="file" class="form-control" id="Document" [(ngModel)]="adddocreq.document"
                    name="Document" aria-describedby="productname" placeholder="Document"
-                   #BrandName="ngModel" />
+                   #BrandName="ngModel" (change)="onFileSelected($event)" />
           </div>
+          <div class="col-sm-2">
+          <button type="button" class="btn btn-secondary" (click)="onUpload()">Upload</button>
+        </div>
         </div>
         <div class="form-group row">
 
