--- a/VlimsWeb/ClientApp/src/app/securitymanagement/securitymanagement.component.html
+++ b/VlimsWeb/ClientApp/src/app/securitymanagement/securitymanagement.component.html
@@ -35,7 +35,7 @@
               <span class="fa fa-edit"></span>
             </button>-->
 
-      <form (ngSubmit)="submit(newdept)" #fm="ngForm">
+      <form (ngSubmit)="submit(securityType)" #fm="ngForm">
         <div class="modal-body">
           <tr>
             <td><label for="username" class="col-sm-12 col-form-label">Minimum User ID Length</label></td>
