--- a/VlimsWeb/ClientApp/src/app/user-configuration/user-configuration.component.html
+++ b/VlimsWeb/ClientApp/src/app/user-configuration/user-configuration.component.html
@@ -17,8 +17,8 @@
       <thead>
         <tr>
           <th scope="col">S.No</th>
-          <th scope="col">First Name</th>
-          <th scope="col">Last Name</th>
+          <!--<th scope="col">First Name</th>
+          <th scope="col">Last Name</th>-->
           <th scope="col">User ID</th>
           <th scope="col">Department</th>
           <th scope="col">Role</th>
@@ -31,8 +31,8 @@
       <tbody>
         <tr *ngFor="let doc of types; let i=index">
           <th>{{i+1}}</th>
-          <td>{{doc?.FirstName}}</td>
-          <td>{{doc?.LastName}}</td>
+          <!--<td>{{doc?.FirstName}}</td>
+          <td>{{doc?.LastName}}</td>-->
           <td>{{doc?.UserID}}</td>
           <td>{{doc?.Department}}</td>
           <td>{{doc?.Role}}</td>
