--- a/VlimsWeb/ClientApp/src/app/documentprep-add/documentprep-add.component.html
+++ b/VlimsWeb/ClientApp/src/app/documentprep-add/documentprep-add.component.html
@@ -1,3 +1,6 @@
+<!-- parent.component.html -->
+
+
 <div class="card shadow mb-4" style="padding-top: 2px;">
   <div class="card-header py-3">
     <div col-12 style="float: left;">
