--- a/VlimsWeb/ClientApp/src/app/Add-usergroupconfiguration/add-usergroupconfiguration.component.html
+++ b/VlimsWeb/ClientApp/src/app/Add-usergroupconfiguration/add-usergroupconfiguration.component.html
@@ -15,7 +15,7 @@
           <div class="col-sm-8">
             <input type="text" class="form-control" id="UserGroupName" [(ngModel)]="newdept.usergroupname"
                    pattern='[A-Za-z\\s]*' name="UserGroupName" aria-describedby="productname" placeholder="Enter User Group Name"
-                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+                   #BrandName="ngModel"  />
           </div>
         </div>
         <div class="form-group row">
@@ -25,7 +25,7 @@
           <div class="col-sm-8">
             <input type="text" class="form-control" id="UserGroupCode" [(ngModel)]="newdept.code"
                    pattern='[A-Za-z\\s]*' name="UserGroupCode" aria-describedby="productname" placeholder="Enter UserGroupCode Code"
-                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+                   #BrandName="ngModel"  />
           </div>
         </div>
         <div class="form-group row">
@@ -35,7 +35,7 @@
           <div class="col-sm-8">
             <!--[(ngModel)]="adddocreq.department"-->
             <select class="form-control" [(ngModel)]="newdept.users"  name="Assigntodepartment" id="Assigntodepartment" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
-                    [ngClass]="{ 'is-invalid': fm.submitted && Assigntodepartment.invalid }" required>
+                    >
               <option value="Select">Select</option>
               <option *ngFor="let user of types" value={{user.UserID}}>{{user?.UserID}}</option>
             </select>
@@ -52,7 +52,7 @@
         <div class="col-sm-8">
           <input type="text" class="form-control" id="TotalUsers" [(ngModel)]="newdept.totalusers"
                  pattern='[A-Za-z\\s]*' name="TotalUsers" aria-describedby="productname" placeholder="Enter TotalUsers"
-                 #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+                 #BrandName="ngModel"  />
         </div>
       </div>
 
