workitems related changes

--- a/VlimsWeb/ClientApp/src/app/workitems/workitems.component.html
+++ b/VlimsWeb/ClientApp/src/app/workitems/workitems.component.html
@@ -28,7 +28,7 @@
             <th>{{i+1}}</th>
             <td (click)="getInfo(doc?.TaskType,doc?.TaskName)" ><a> {{doc?.TaskType}} </a></td>
             <td>{{doc?.Stage}}</td>
-            <td>{{doc?.AssignedtoGroup}}</td>
+            <td>{{doc?.AssignedToGroup}}</td>
             <td>{{doc?.InitiatedBy}}</td>
             <td>{{doc?.InitiatedOn}}</td>
             <td>Success</td>
