--- a/VlimsWeb/ClientApp/src/app/add-document-request/add-document-request.component.html
+++ b/VlimsWeb/ClientApp/src/app/add-document-request/add-document-request.component.html
@@ -1,7 +1,7 @@
 <div class="card shadow mb-4" style="padding-top: 2px;">
   <div class="card-header py-3">
     <div col-12 style="float: left;">
-      <h6 class="m-0 font-weight-bold text-primary">Add Document Type Configuration</h6>
+      <h6 class="m-0 font-weight-bold text-primary">{{title}}</h6>
     </div>
 
   </div>
