--- a/VlimsWeb/ClientApp/src/app/document-preperation/document-preperation.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-preperation/document-preperation.component.html
@@ -31,7 +31,7 @@
             <td>{{doc?.documenttype}}</td>
             <td>{{doc?.department}}</td>          
             <td>{{doc?.template}}</td>            
-            <td>Success</td>
+            <td>{{doc?.status}}</td>
             <td>
               <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTCId"
                       data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);">
