--- a/VlimsWeb/ClientApp/src/app/workitems/workitems.component.html
+++ b/VlimsWeb/ClientApp/src/app/workitems/workitems.component.html
@@ -25,7 +25,7 @@
         <tbody>
           <tr *ngFor="let doc of types; let i=index">
             <th>{{i+1}}</th>
-            <td (click)="getInfo(doc?.TaskType,doc?.TaskName)" ><a> {{doc?.TaskType}} </a></td>
+            <td (click)="getInfo(doc?.TaskType,doc?.TaskName,doc?.WITId)" ><a> {{doc?.TaskType}} </a></td>
             <td>{{doc?.Stage}}</td>           
             <td>{{doc?.InitiatedBy}}</td>
             <td>{{doc?.InitiatedOn}}</td>
