--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -20,7 +20,7 @@
                 id="documentType"
                 name="documentType"
                 placeholder="Document Type Name"
-                [(ngModel)]="documentType.Documenttypename"
+                [(ngModel)]="documentType.Documenttypename" [disabled]="viewMode"
               />
             </div>
           </div>
@@ -33,7 +33,7 @@
                 id="prefix"
                 name="prefix"
                 placeholder="Prefix"
-                [(ngModel)]="documentType.documenttypeprefix"
+                [(ngModel)]="documentType.documenttypeprefix" [disabled]="viewMode"
               />
             </div>
           </div>
@@ -48,7 +48,7 @@
                 name="description"
                 rows="3"
                 placeholder="Description"
-                [(ngModel)]="documentType.Description"
+                [(ngModel)]="documentType.Description" [disabled]="viewMode"
               ></textarea>
             </div>
           </div>
@@ -58,9 +58,23 @@
             >
             <div class="col-sm-10">
              
-                <p-multiSelect [options]="departments" [(ngModel)]="selectedDepartments" defaultLabel="Select a Department" name="department" optionLabel="DepartmentName" display="chip"></p-multiSelect>
-           
-            
+                <div *ngIf="viewMode">
+                <p-multiSelect [options]="departments" [(ngModel)]="selectedDepartments" defaultLabel="Select a Department" name="department" id="department" optionLabel="DepartmentName" display="chip" [disabled]="viewMode">
+                  <ng-template pTemplate="selectedItems" let-options>
+                    <ng-container *ngTemplateOutlet="customTemplate; context: {$implicit: options}"></ng-container>
+                  </ng-template>
+                </p-multiSelect>
+                <ng-template #customTemplate let-options>
+                  <div class="p-chips-container p-inputtext" *ngIf="departments && departments.length">
+                    <span class="p-chip p-highlight">{{ departments[0].DepartmentName }}</span>
+                    <span *ngIf="departments.length > 1" class="p-chip">+{{ departments.length - 1 }}</span>
+                  </div>
+                </ng-template>
+              </div>
+              <div *ngIf="!viewMode">
+              <p-multiSelect [options]="departments" [(ngModel)]="selectedDepartments" defaultLabel="Select a Department" name="department" id="department" optionLabel="DepartmentName" display="chip">
+              </p-multiSelect>
+            </div>
             </div>
           </div>
           
@@ -78,3 +92,4 @@
     </div>
   </div>
 </div>
+
