Document manager updates

--- a/VlimsWeb/ClientApp/src/app/workflow-config/workflow-config.component.html
+++ b/VlimsWeb/ClientApp/src/app/workflow-config/workflow-config.component.html
@@ -20,7 +20,7 @@
           <th scope="col">Document Stage</th>
           <th scope="col">Document Type</th>
           <th scope="col">Department</th>
-          <th scope="col">Registered By</th>
+          <!--<th scope="col">Registered By</th>-->
           <th scope="col">Registered On</th>
           <th scope="col">Status</th>
           <th scope="col">Actions</th>
@@ -32,7 +32,7 @@
           <td>{{doc?.documentstage}}</td>
           <td>{{doc?.documenttype}}</td>
           <td>{{doc?.department}}</td>
-          <td>{{doc?.ModifiedBy}}</td>
+          <!--<td>{{doc?.ModifiedBy}}</td>-->
           <td>{{doc?.ModifiedDate  | date}}</td>
           <td>Success</td>
           <td>
