--- a/VlimsWeb/ClientApp/src/app/document-type-config/document-type-config.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-type-config/document-type-config.component.html
@@ -20,7 +20,7 @@
             <th scope="col">S.No</th>
             <th scope="col">Document Name</th>
             <th scope="col">Document Type </th>
-            <th scope="col">Description</th>
+            <!--<th scope="col">Description</th>-->
             <th scope="col">Registered By</th>
             <th scope="col">Registered On</th>
             <th scope="col">Status</th>
@@ -32,7 +32,7 @@
             <th>{{i+1}}</th>
             <td>{{doc?.Documenttypename}}</td>
             <td>{{doc?.documenttypeprefix}}</td>
-            <td>{{doc?.Description}}</td>
+            <!--<td>{{doc?.Description}}</td>-->
             <td>{{doc?.ModifiedBy}}</td>
             <td>{{doc?.ModifiedDate | date}}</td>
             <td>Success</td>
