Status updated dynamically

--- a/VlimsWeb/ClientApp/src/app/document-template-config/document-template-config.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-template-config/document-template-config.component.html
@@ -34,7 +34,7 @@
             <td>{{doc?.ModifiedBy}}</td>
             <td>{{doc?.ModifiedDate | date}}</td>
 
-            <td>Success</td>
+            <td>{{doc?.Status}}</td>
             <td>              
               <button class="btn"> <span class="fa fa-edit" (click)="editdoc(doc);"></span></button>
             </td>
