--- a/VlimsWeb/ClientApp/src/app/document-type-config/document-type-config.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-type-config/document-type-config.component.html
@@ -35,7 +35,7 @@
             <!--<td>{{doc?.Description}}</td>-->
             <td>{{doc?.ModifiedBy}}</td>
             <td>{{doc?.ModifiedDate | date}}</td>
-            <td>Success</td>
+            <td>{{doc?.Status}}</td>
             <td>
               <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTCId"
                       data-backdrop="static" data-keyboard="false" (click)="editdoc(doc);">
