Plan,User changes

--- a/VlimsWeb/ClientApp/src/app/user-configuration/user-configuration.component.html
+++ b/VlimsWeb/ClientApp/src/app/user-configuration/user-configuration.component.html
@@ -38,7 +38,7 @@
           <td>{{doc?.Role}}</td>
           <td>{{doc?.Empid}}</td>
           <td>{{doc?.EmailId}}</td>
-          <td>Success</td>
+          <td>{{doc?.Status}}</td>
           <td>
             <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
               data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);"> <span
