--- a/VlimsWeb/ClientApp/src/app/plantmanagement/plantmanagement.component.html
+++ b/VlimsWeb/ClientApp/src/app/plantmanagement/plantmanagement.component.html
@@ -34,7 +34,7 @@
         <td>{{doc?.Comments}}</td>
         <td>{{doc?.ModifiedBy}}</td>
         <td>{{doc?.ModifiedDate  | date}}</td>
-        <td>Success</td>
+        <td>{{doc?.Status}}</td>
         <td>
           <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
             data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);"> <span
