--- a/VlimsWeb/ClientApp/src/app/usergroupconfiguration/usergroupconfiguration.component.html
+++ b/VlimsWeb/ClientApp/src/app/usergroupconfiguration/usergroupconfiguration.component.html
@@ -36,10 +36,10 @@
             <td>Success</td>
             <td>
               <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
-                      data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);">
-                <span class="fa fa-flag fa-wrench"></span>
+                      data-backdrop="static" data-keyboard="false" (click)="editdoc(doc);">
+                <span class="fa fa-edit"></span>
               </button>
-              <button class="btn"> <span class="fa fa-edit" (click)="deleteBrand(i,doc);"></span></button>
+                
             </td>
           </tr>
         </tbody>
