--- a/VlimsWeb/ClientApp/src/app/user-configuration/user-configuration.component.html
+++ b/VlimsWeb/ClientApp/src/app/user-configuration/user-configuration.component.html
@@ -41,7 +41,7 @@
           <td>{{doc?.Status}}</td>
           <td>
             <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
-              data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);"> <span
+              data-backdrop="static" data-keyboard="false" (click)="editdoc(doc);"> <span
                 class="fa fa-edit"></span> </button>
             <!-- <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button> -->
           </td>
