--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="row p-2">
     <div class="col">
-      <form (ngSubmit)="adddoctype(documentType)">
+      <form (ngSubmit)="adddoctype(documentType)"  #fm="ngForm">
       <div class="p-4 bg-white shadow-dark rounded-2">
         
           <div class="form-group row">
@@ -21,6 +21,7 @@
                 name="documentType"
                 placeholder="Document Type Name"
                 [(ngModel)]="documentType.Documenttypename" [disabled]="viewMode"
+               
               />
             </div>
           </div>
@@ -34,6 +35,7 @@
                 name="prefix"
                 placeholder="Prefix"
                 [(ngModel)]="documentType.documenttypeprefix" [disabled]="viewMode"
+                
               />
             </div>
           </div>
@@ -49,6 +51,7 @@
                 rows="3"
                 placeholder="Description"
                 [(ngModel)]="documentType.Description" [disabled]="viewMode"
+               
               ></textarea>
             </div>
           </div>
@@ -72,7 +75,10 @@
                 </ng-template>
               </div>
               <div *ngIf="!viewMode">
-              <p-multiSelect [options]="departments" [(ngModel)]="selectedDepartments" defaultLabel="Select a Department" name="department" id="department" optionLabel="DepartmentName" display="chip">
+              <p-multiSelect [options]="departments" [(ngModel)]="selectedDepartments" defaultLabel="Select a Department" 
+              name="department" id="department" optionLabel="DepartmentName"
+              
+               display="chip">
               </p-multiSelect>
             </div>
             </div>
@@ -84,7 +90,8 @@
       <div class="form-group row my-4">
         <div class="col-sm-10 offset-sm-2">
           <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary" *ngIf="!editMode">Submit</button>
+          <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
         </div>
       </div>
 
