--- a/VlimsApp/ClientApp/src/app/app.component.html
+++ b/VlimsApp/ClientApp/src/app/app.component.html
@@ -20,4 +20,4 @@
   <app-left-nav *ngIf="isLoggedIn"></app-left-nav>
   <router-outlet></router-outlet>
 </div>
-<ngx-spinner></ngx-spinner>
+<ngx-spinner type="ball-clip-rotate"></ngx-spinner>
