--- a/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
@@ -15,18 +15,18 @@
     <div class="row p-2">
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
-            <p-table #workflowTable [value]="workflowsDatasource"
+            <p-table #workflowTable [value]="types"
             [globalFilterFields]="['docStage', 'docType', 'department','registeredBy', 'status']"
              tableStyleClass="table table-striped">
                 <ng-template pTemplate="header">
                     <tr>
                         <th>#</th>
-                        <th pSortableColumn="docStage" style="width:20%">Document Stage<p-sortIcon field="docStage"></p-sortIcon></th>
-                        <th pSortableColumn="docType" style="width:10%">Document Type <p-sortIcon field="docType"></p-sortIcon></th>
+                        <th pSortableColumn="documentstage" style="width:20%">Document Stage<p-sortIcon field="documentstage"></p-sortIcon></th>
+                        <th pSortableColumn="documenttype" style="width:10%">Document Type <p-sortIcon field="documenttype"></p-sortIcon></th>
                         <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
-                        <th pSortableColumn="registeredBy" style="width:20%">Registered by<p-sortIcon field="registeredBy"></p-sortIcon></th>
-                        <th pSortableColumn="registeredOn" style="width:200px">Registered On <p-sortIcon field="registeredOn"></p-sortIcon></th>
-                        <th pSortableColumn="status" style="width:200px">Status <p-sortIcon field="status"></p-sortIcon></th>
+                        <th pSortableColumn="CreatedBy" style="width:20%">Registered by<p-sortIcon field="CreatedBy"></p-sortIcon></th>
+                        <th pSortableColumn="CreatedDate" style="width:200px">Registered On <p-sortIcon field="CreatedDate"></p-sortIcon></th>
+                        <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
                         <th style="width:80px">Actions</th>
 
                     </tr>
@@ -34,12 +34,12 @@
                 <ng-template pTemplate="body" let-docItem let-i="rowIndex">
                     <tr>  
                         <td>{{ i + 1 }}</td>  
-                        <td>{{docItem.docStage}}</td>
-                        <td>{{docItem.docType}}</td>
+                        <td>{{docItem.documentstage}}</td>
+                        <td>{{docItem.documenttype}}</td>
                         <td>{{docItem.department}}</td>
-                        <td>{{docItem.registeredBy}}</td>
-                        <td>{{docItem.registeredOn}}</td>
-                        <td><span class="status text-nowrap" [ngClass]="getStatusClass(docItem['status'])">{{docItem.status}} </span></td>
+                        <td>{{docItem.CreatedBy}}</td>
+                        <td>{{docItem.CreatedDate}}</td>
+                        <td><span class="status text-nowrap" [ngClass]="getStatusClass(docItem['Status'])">{{docItem.Status}} </span></td>
                         <td class="text-center"><i class="bi bi-pencil"></i></td>
                     </tr>
                 </ng-template>
