--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -44,7 +44,7 @@
             >Document Type</label
           >
           <div class="col-sm-10">
-            <p-dropdown [options]="typesDatasource" [(ngModel)]="selectedtype" placeholder="Select a Department" 
+            <p-dropdown [options]="typesDatasource" [(ngModel)]="selectedtype" placeholder="Select a Document Type" 
             optionLabel="Documenttypename" ></p-dropdown>
             <!-- <input
               type="text"
